Tested Yolov3 & Yolov3 Tiny with GEMM Plus as backend..

--- a/cfg/yolov3-tiny.cfg
+++ b/cfg/yolov3-tiny.cfg
@@ -126,8 +126,9 @@ stride=1
 pad=1
 filters=255
 activation=linear
-
-
+vectorized=1
+vecsize=8
+devectorize=1
 
 [yolo]
 mask = 3,4,5
@@ -170,6 +171,9 @@ stride=1
 pad=1
 filters=255
 activation=linear
+vectorized=1
+vecsize=8
+devectorize=1
 
 [yolo]
 mask = 0,1,2
