--- a/cfg/yolov3.cfg
+++ b/cfg/yolov3.cfg
@@ -602,6 +602,9 @@ stride=1
 pad=1
 filters=255
 activation=linear
+vectorized=1
+vecsize=8
+devectorize=1
 
 
 [yolo]
@@ -688,7 +691,9 @@ stride=1
 pad=1
 filters=255
 activation=linear
-
+vectorized=1
+vecsize=8
+devectorize=1
 
 [yolo]
 mask = 3,4,5
@@ -775,6 +780,9 @@ stride=1
 pad=1
 filters=255
 activation=linear
+vectorized=1
+vecsize=8
+devectorize=1
 
 
 [yolo]
