Tested Classification and Detection with XNNPACK as backend.

--- a/cfg/yolov3-tiny.cfg
+++ b/cfg/yolov3-tiny.cfg
@@ -126,8 +126,7 @@ stride=1
 pad=1
 filters=255
 activation=linear
-vectorized=1
-vecsize=8
+
 devectorize=1
 
 [yolo]
@@ -164,6 +163,7 @@ size=3
 stride=1
 pad=1
 activation=leaky
+devectorize=1
 
 [convolutional]
 size=1
@@ -171,8 +171,7 @@ stride=1
 pad=1
 filters=255
 activation=linear
-vectorized=1
-vecsize=8
+
 devectorize=1
 
 [yolo]
